fixed text overflow

--- a/src/components/homepage.css
+++ b/src/components/homepage.css
@@ -9,7 +9,3 @@
 #rotate-left:hover {
     transform: rotate(-20deg);
 }
-
-* > {
-    word-break: normal
-}
